- rename EN_US tape to adhesive tape - Added an useless logo

--- a/src/main/resources/assets/furnitureexpanded/lang/en_us.json
+++ b/src/main/resources/assets/furnitureexpanded/lang/en_us.json
@@ -2,7 +2,7 @@
   "itemGroup.expandedTab": "Furniture Expanded",
 
   "item.furnitureexpanded.basket": "Basket",
-  "item.furnitureexpanded.tape": "Tape",
+  "item.furnitureexpanded.tape": "Adhesive Tape",
   "item.furnitureexpanded.saw": "Saw",
   "item.furnitureexpanded.sawdust": "Sawdust",
 
