this is for Fabric 1.18.

--- a/src/main/resources/assets/furnitureexpanded/lang/pt_br.json
+++ b/src/main/resources/assets/furnitureexpanded/lang/pt_br.json
@@ -1,5 +1,5 @@
 {
-  "itemGroup.expandedTab": "Furniture Expanded",
+  "itemGroup.furnitureexpanded.general": "Furniture Expanded",
 
   "item.furnitureexpanded.basket": "Cesta",
   "item.furnitureexpanded.tape": "Fita Adesiva",
