--- a/src/main/resources/assets/furnitureexpanded/lang/en_us.json
+++ b/src/main/resources/assets/furnitureexpanded/lang/en_us.json
@@ -1,5 +1,5 @@
 {
-  "itemGroup.expandedTab": "Furniture Expanded",
+  "itemGroup.furnitureexpanded.general": "Furniture Expanded",
 
   "item.furnitureexpanded.basket": "Basket",
   "item.furnitureexpanded.tape": "Adhesive Tape",
