- Baskets now function like bags (right click to open) - Baskets are now dyeable (just like leather armor) - Baskets now change according to how many items it has inside - New block added: Bathtub - New block added: Shower Head - Shower box model has been updated with a closing door - Shower box now has a valve if a shower head is present above - A few hitboxes and models light optimizations. - Renamed Shower Box to Shower Enclosure - Bathroom sink tap is no longer made out of wood, instead it uses gray concrete as a texture material. - Players no longer teleport back to their previous positions when getting up from a seat, instead they will be teleported to an adjacent position that is free. - Fixed crafting recipe for the toilet (1.19 branch)

--- a/src/main/resources/assets/furnitureexpanded/lang/en_us.json
+++ b/src/main/resources/assets/furnitureexpanded/lang/en_us.json
@@ -1,13 +1,15 @@
 {
   "itemGroup.expandedTab": "Furniture Expanded",
 
-  "item.furnitureexpanded.basket": "Basket",
   "item.furnitureexpanded.tape": "Adhesive Tape",
   "item.furnitureexpanded.saw": "Saw",
   "item.furnitureexpanded.sawdust": "Sawdust",
+  "item.furnitureexpanded.basket": "Basket",
 
   "block.furnitureexpanded.toilet": "Toilet",
-  "block.furnitureexpanded.shower_box": "Shower Box",
+  "block.furnitureexpanded.bathtub": "Bath Tub",
+  "block.furnitureexpanded.shower_box": "Shower Enclosure",
+  "block.furnitureexpanded.shower_head": "Shower Head",
   "block.furnitureexpanded.bathroom_sink": "Bathroom Sink",
   "block.furnitureexpanded.towel_bar": "Towel Bar",
   "block.furnitureexpanded.paper_holder": "Toilet Paper Holder",
@@ -15,5 +17,7 @@
   "block.furnitureexpanded.mirror": "Mirror",
   "block.furnitureexpanded.cardbox": "Cardbox",
   "block.furnitureexpanded.file_cabinet": "File Cabinet",
-  "block.furnitureexpanded.clock_sign": "Clock Sign"
+  "block.furnitureexpanded.clock_sign": "Clock Sign",
+
+  "sound.furnitureexpanded.shower": "Shower"
 }
