--- a/src/main/resources/assets/furnitureexpanded/lang/pt_br.json
+++ b/src/main/resources/assets/furnitureexpanded/lang/pt_br.json
@@ -1,5 +1,5 @@
 {
-  "itemGroup.expandedTab": "Furniture Expanded",
+  "item_group.furnitureexpanded.expanded_tab": "Furniture Expanded",
 
   "item.furnitureexpanded.tape": "Fita Adesiva",
   "item.furnitureexpanded.saw": "Serra",
