--- a/src/main/resources/assets/furnitureexpanded/lang/en_us.json
+++ b/src/main/resources/assets/furnitureexpanded/lang/en_us.json
@@ -1,5 +1,5 @@
 {
-  "itemGroup.expandedTab": "Furniture Expanded",
+  "item_group.furnitureexpanded.expanded_tab": "Furniture Expanded",
 
   "item.furnitureexpanded.tape": "Adhesive Tape",
   "item.furnitureexpanded.saw": "Saw",
