- 1.1 port to fabric 1.19.4

--- a/src/main/resources/assets/furnitureexpanded/lang/en_us.json
+++ b/src/main/resources/assets/furnitureexpanded/lang/en_us.json
@@ -1,5 +1,5 @@
 {
-  "itemGroup.furnitureexpanded.general": "Furniture Expanded",
+  "itemGroup.furnitureexpanded.expanded_tab": "Furniture Expanded",
 
   "item.furnitureexpanded.tape": "Adhesive Tape",
   "item.furnitureexpanded.saw": "Saw",
